fix: wider comment on mobile

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,7 @@
 // Using scss because sass/sass#1088
 
 $card-title-word-break: normal;
+$timeline-divider-width: 64px;
 
 // Rally preset
 $material-dark: (
